--- a/elutsykkel/waterfall.html
+++ b/elutsykkel/waterfall.html
@@ -73,6 +73,7 @@
     <a href="https://et.wikipedia.org/wiki/Koskmudel">Kasutatud kirjandus</a>
     <br>
     <br>
+    <a href="back">Tagasi</a>
     <br>
 </body>
 
