--- a/elutsykkel/waterfall.html
+++ b/elutsykkel/waterfall.html
@@ -73,7 +73,7 @@
     <a href="https://et.wikipedia.org/wiki/Koskmudel">Kasutatud kirjandus</a>
     <br>
     <br>
-    <a href="back">Tagasi</a>
+   <button onclick="goBack()">Tagasi</button>
     <br>
 </body>
 
