--- a/elutsykkel/waterfall.html
+++ b/elutsykkel/waterfall.html
@@ -73,8 +73,7 @@
     <a href="https://et.wikipedia.org/wiki/Koskmudel">Kasutatud kirjandus</a>
     <br>
     <br>
-   <button onclick="goBack()">Tagasi</button>
-    <br>
+<a href="history.back()">Tagasi</a>    <br>
 </body>
 
 </html>
