--- a/elutsykkel/waterfall.html
+++ b/elutsykkel/waterfall.html
@@ -73,7 +73,7 @@
     <a href="https://et.wikipedia.org/wiki/Koskmudel">Kasutatud kirjandus</a>
     <br>
     <br>
-<a href="index.html">Tagasi</a>    <br>
+<a href="./index.html">Tagasi</a>    <br>
 </body>
 
 </html>
