--- a/elutsykkel/waterfall.html
+++ b/elutsykkel/waterfall.html
@@ -74,7 +74,8 @@
     <br>
     <br>
 <a href="../index.html">Tagasi</a>  
-<button href:="../index.html"></button>  
+<br>
+<button href:="../index.html">Go Back</button>  
 <br>
 <br>
 </body>
