--- a/elutsykkel/waterfall.html
+++ b/elutsykkel/waterfall.html
@@ -73,7 +73,7 @@
     <a href="https://et.wikipedia.org/wiki/Koskmudel">Kasutatud kirjandus</a>
     <br>
     <br>
-<a href="../index.html">Tagasi</a>  
+<a href="javascript:window.history.back();">Tagasi</a>  
 <br>
 <button href:="../index.html">Go Back</button>  
 <br>
