--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <br>
     <ul>
         <li><a href="elutsykkel/waterfall.html">Waterfall arendusmudel</a></li>
+        <li><a href="elutsykkel/inkrementaalne.html">Inkrementaalne arendusmudel</a></li>
     </ul>
     <br />
     <br />
