--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="elutsykkel/waterfall.html">Waterfall arendusmudel</a></li>
         <li><a href="elutsykkel/inkrementaalne.html">Inkrementaalne arendusmudel</a></li>
+        <li><a href="elutsykkel/spiraalmudel.html">Spiraalmudel</a></li>
     </ul>
     <br />
     <br />
