--- a/elutsykkel/inkrementaalne.html
+++ b/elutsykkel/inkrementaalne.html
@@ -7,7 +7,7 @@
     <title>Inkrementaalne arendusmudel</title>
 </head>
 
-<body>
+<body style="background-color: rgb(181, 211, 151);">
     <h1>Inkrementaalne arendusmudel</h1>
     <h2>Inkrementaalne arendusmudel on tarkvara arendamise metoodika, kus toodet arendatakse väikeste, vaikselt
         arenevate osade kaupa.</h2>
@@ -25,7 +25,7 @@
     <br>
     <br>
 
-    <table border="1"  style="width: 50%;">
+    <table border="1"  style="width: 60%;">
         <tr style="text-align: center;">
             <td>Eelised</td>
             <td>Puudused</td>
