--- a/elutsykkel/spiraalmudel.html
+++ b/elutsykkel/spiraalmudel.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spiraalmudel</title>
-   
+
 </head>
 
 <body style="background-color: rgb(151, 139, 186);">
     <p>
     <h1>Spiraalmudel</h1>
-    <h2>
+    <h3>
         Spiraalmudel on riskipõhine mudel, mis tähendab, et keskendutakse riskide juhtimisele tarkvaraarenduse protsessi
         mitme iteratsiooni kaudu. See koosneb järgmistest etappidest:
-    </h2>
+    </h3>
     <ul>
         <li><b>1. Määratletud eesmärgid:</b> piraalmudeli esimeses etapis selgitame, mida projekti eesmärk on saavutada,
             sealhulgas funktsionaalsed ja mittefunktsionaalsed nõuded.</li>
@@ -39,25 +39,41 @@
         <tr>
             <td>
                 <ul>
-                    <li> Riskijuhtimine: paljude tundmatute riskidega projektid, mis tekivad arenduse edenedes, sellisel juhul on spiraalmudel tänu riskianalüüsile ja riskide käsitlemisele igas etapis parim arendusmudel, mida järgida.</li>
-                    <li> Hea suurte projektide jaoks: Spiraalmudelit on soovitatav kasutada suurtes ja keerukates projektides.</li>
-                    <li> Nõuete paindlikkus: seda mudelit kasutades saab hilisemas etapis nõuete muutmistaotlusi täpselt lisada.</li>
-                    <li> Kliendirahulolu: Kliendid näevad toote arengut tarkvaraarenduse varajases faasis ja seega harjuvad nad süsteemiga seda kasutades enne kogu toote valmimist.</li>
-                    <li> Iteratiivne ja järkjärguline lähenemine: Spiraalmudel pakub tarkvaraarendusele iteratiivset ja järkjärgulist lähenemist, võimaldades paindlikkust ja kohanemisvõimet reageerides muutuvatele nõuetele või ootamatutele sündmustele.</li>
-                    <li>Rõhk riskijuhtimisel: Spiraalmudel paneb suure rõhu riskijuhtimisele, mis aitab minimeerida ebakindluse ja riskide mõju tarkvara arendusprotsessile.</li>
-                    <li>Täiustatud suhtlus: spiraalmudel näeb ette regulaarseid hindamisi ja ülevaatusi, mis võivad parandada suhtlust kliendi ja arendusmeeskonna vahel.</li>
-                    <li>Täiustatud kvaliteet: spiraalmudel võimaldab tarkvara arendusprotsessi mitu korda itereerida, mille tulemuseks on tarkvara kvaliteedi ja töökindluse paranemine.</li>
+                    <li> Riskijuhtimine: paljude tundmatute riskidega projektid, mis tekivad arenduse edenedes, sellisel
+                        juhul on spiraalmudel tänu riskianalüüsile ja riskide käsitlemisele igas etapis parim
+                        arendusmudel, mida järgida.</li>
+                    <li> Hea suurte projektide jaoks: Spiraalmudelit on soovitatav kasutada suurtes ja keerukates
+                        projektides.</li>
+                    <li> Nõuete paindlikkus: seda mudelit kasutades saab hilisemas etapis nõuete muutmistaotlusi täpselt
+                        lisada.</li>
+                    <li> Kliendirahulolu: Kliendid näevad toote arengut tarkvaraarenduse varajases faasis ja seega
+                        harjuvad nad süsteemiga seda kasutades enne kogu toote valmimist.</li>
+                    <li> Iteratiivne ja järkjärguline lähenemine: Spiraalmudel pakub tarkvaraarendusele iteratiivset ja
+                        järkjärgulist lähenemist, võimaldades paindlikkust ja kohanemisvõimet reageerides muutuvatele
+                        nõuetele või ootamatutele sündmustele.</li>
+                    <li>Rõhk riskijuhtimisel: Spiraalmudel paneb suure rõhu riskijuhtimisele, mis aitab minimeerida
+                        ebakindluse ja riskide mõju tarkvara arendusprotsessile.</li>
+                    <li>Täiustatud suhtlus: spiraalmudel näeb ette regulaarseid hindamisi ja ülevaatusi, mis võivad
+                        parandada suhtlust kliendi ja arendusmeeskonna vahel.</li>
+                    <li>Täiustatud kvaliteet: spiraalmudel võimaldab tarkvara arendusprotsessi mitu korda itereerida,
+                        mille tulemuseks on tarkvara kvaliteedi ja töökindluse paranemine.</li>
                 </ul>
             </td>
             <td>
                 <ul>
-                  <li>Kompleksne: spiraalmudel on palju keerulisem kui teised SDLC mudelid.</li>
-                  <li>Kallis: Spiraalmudel ei sobi väikeste projektide jaoks, kuna see on kallis.</li>
-                  <li>Liiga suur usaldusväärsus riskianalüüsile: projekti edukas lõpuleviimine sõltub suurel määral riskianalüüsist. Ilma väga kogenud ekspertideta on selle mudeli abil projekti väljatöötamine ebaõnnestunud.</li>
-                  <li>Raskused aja juhtimisel: kuna projekti alguses ei ole etappide arv teada, on aja hindamine väga keeruline.</li>
-                  <li>Keerukus: Spiraalmudel võib olla keeruline, kuna see hõlmab tarkvaraarenduse protsessi mitut iteratsiooni.</li>
-                  <li>Aeganõudev: spiraalmudel võib olla aeganõudev, kuna see nõuab mitut hindamist ja ülevaatamist.</li>
-                  <li>Aeganõudev: spiraalmudel võib olla aeganõudev, kuna see nõuab mitut hindamist ja ülevaatamist.</li>
+                    <li>Kompleksne: spiraalmudel on palju keerulisem kui teised SDLC mudelid.</li>
+                    <li>Kallis: Spiraalmudel ei sobi väikeste projektide jaoks, kuna see on kallis.</li>
+                    <li>Liiga suur usaldusväärsus riskianalüüsile: projekti edukas lõpuleviimine sõltub suurel määral
+                        riskianalüüsist. Ilma väga kogenud ekspertideta on selle mudeli abil projekti väljatöötamine
+                        ebaõnnestunud.</li>
+                    <li>Raskused aja juhtimisel: kuna projekti alguses ei ole etappide arv teada, on aja hindamine väga
+                        keeruline.</li>
+                    <li>Keerukus: Spiraalmudel võib olla keeruline, kuna see hõlmab tarkvaraarenduse protsessi mitut
+                        iteratsiooni.</li>
+                    <li>Aeganõudev: spiraalmudel võib olla aeganõudev, kuna see nõuab mitut hindamist ja ülevaatamist.
+                    </li>
+                    <li>Aeganõudev: spiraalmudel võib olla aeganõudev, kuna see nõuab mitut hindamist ja ülevaatamist.
+                    </li>
                 </ul>
             </td>
         </tr>
