--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Minu Tarkvara Arendusprotsessi Ainemapp</title>
 </head>
 
-<body>
+<body style="background-color: rgb(159, 234, 234);">
     <h1>Tarkvara Arendusprotsessi tehtud tööde konspekt</h1>
     <br>
     <ul>
         <li><a href="elutsykkel/waterfall.html">Waterfall arendusmudel</a></li>
         <li><a href="elutsykkel/inkrementaalne.html">Inkrementaalne arendusmudel</a></li>
         <li><a href="elutsykkel/spiraalmudel.html">Spiraalmudel</a></li>
+        <li><a href="elutsykkel/prototüüpimine.html">Prototüüpimine</a></li>
     </ul>
     <br />
     <br />
