--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <li><a href="elutsykkel/inkrementaalne.html">Inkrementaalne arendusmudel</a></li>
         <li><a href="elutsykkel/spiraalmudel.html">Spiraalmudel</a></li>
         <li><a href="elutsykkel/prototüüpimine.html">Prototüüpimine</a></li>
+        <br>
+        <li><a href="casevahendid/main.html">CASE-vahendid</a></li>
     </ul>
     <br />
     <br />
