--- a/casevahendid/uppercase.html
+++ b/casevahendid/uppercase.html
@@ -12,11 +12,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uppercase</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
     <h2>Mis on uppercase vahendid? <a
-            href="https://dev.to/adityapratapbh1/comprehensive-overview-of-case-tools-streamlining-software-development-2p9p">(1)</a>
+            href="https://dev.to/adityapratapbh1/comprehensive-overview-of-case-tools-streamlining-software-development-2p9p" target="_blank">(1)</a>
     </h2>
     Upper CASE (U-CASE) tööriistad:
     Upper CASE tööriistad on peamiselt keskendunud tarkvaraarenduse elutsükli algfaasidele, sealhulgas nõuete
@@ -35,13 +36,14 @@
     U-CASE tööriistade näideteks on IBM Rational Rose ja Sparx Systems Enterprise Architect.
 
     <h3>Ise olen kasutanud</h3>
+    <p>
     <ul>
         <li>Notepad++</li>
         <li>Microsoft PowerPoint</li>
     </ul>
-
-    <h3>Näide üks: IBM Rational Rose <a href="https://en.wikipedia.org/wiki/IBM_Rational_Rose">(2) <img
-            src="../pildid/IBMRoseLogo.png" alt="Rose logo" style="width:150px;height:80px"></a></h3>
+    </p>
+    <h3>Näide üks: IBM Rational Rose <a href="https://en.wikipedia.org/wiki/IBM_Rational_Rose" target="_blank">(2) <img
+                src="../pildid/IBMRoseLogo.png" alt="Rose logo" style="width:150px;height:80px"></a></h3>
     <p>Rational Rose oli Unified Modeling Language arenduskeskkond. See integreerub Microsoft Visual Studio .NET ja
         Rational Application Developeriga. Selle tarkvara kirjutas varem Rational Rose’i tootnud IBMi Rational Software
         osakond.</p>
@@ -53,7 +55,7 @@
     <img src="../pildid/IBMRose.jpg" alt="IBM Rational Rose">
 
     <h3>Näide kaks: Sparx Systems Enterprise Architect <a
-            href="https://en.wikipedia.org/wiki/Enterprise_Architect_(software)">(3) <img src="../pildid/sparxlogo.png"
+            href="https://en.wikipedia.org/wiki/Enterprise_Architect_(software)" target="_blank">(3) <img src="../pildid/sparxlogo.png"
                 alt=""></a></h3>
     <p>Sparx Systems Enterprise Architect on visuaalse modelleerimise ja disaini tööriist, mis põhineb OMG UML-il.
         Platvorm toetab: tarkvarasüsteemide projekteerimist ja ehitamist; äriprotsesside modelleerimine; ja
@@ -61,7 +63,7 @@
         süsteemide arhitektuuri modelleerimiseks, vaid ka nende mudelite rakendamise töötlemiseks kogu rakendusearenduse
         elutsükli jooksul.</p>
 
-        <img src="../pildid/sparxVaade.jpg" alt="Sparx Systems Enterprise Architect" style="height: 800px;width: 1300px;">
+    <img src="../pildid/sparxVaade.jpg" alt="Sparx Systems Enterprise Architect" style="height: 800px;width: 1300px;">
 
 
 
@@ -70,17 +72,21 @@
     Kasutatud kirjandus
     <br>
     (1) <a
-        href="https://dev.to/adityapratapbh1/comprehensive-overview-of-case-tools-streamlining-software-development-2p9p">https://dev.to/adityapratapbh1/comprehensive-overview-of-case-tools-streamlining-software-development-2p9p</a>
-    <br>(2) <a
-        href="https://en.wikipedia.org/wiki/IBM_Rational_Rose">https://en.wikipedia.org/wiki/IBM_Rational_Rose</a>
+        href="https://dev.to/adityapratapbh1/comprehensive-overview-of-case-tools-streamlining-software-development-2p9p"
+        target="_blank">https://dev.to/adityapratapbh1/comprehensive-overview-of-case-tools-streamlining-software-development-2p9p</a>
+    <br>(2) <a href="https://en.wikipedia.org/wiki/IBM_Rational_Rose"
+        target="_blank">https://en.wikipedia.org/wiki/IBM_Rational_Rose</a>
     <br>
-    (3) <a
-        href="https://en.wikipedia.org/wiki/Enterprise_Architect_(software)">https://en.wikipedia.org/wiki/Enterprise_Architect_(software)</a>
+    (3) <a href="https://en.wikipedia.org/wiki/Enterprise_Architect_(software)"
+        target="_blank">https://en.wikipedia.org/wiki/Enterprise_Architect_(software)</a>
     <br>
     <br>
-    <a href="javascript:window.history.back();">Tagasi</a>
-    <br>
+
+    <button onclick="javascript:window.history.back();" class="floating">Tagasi</button> <br>
     <br>
 </body>
+<footer>
+    Orvet Priimägi - TARge24
+</footer>
 
 </html>
