--- a/elutsykkel/inkrementaalne.html
+++ b/elutsykkel/inkrementaalne.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inkrementaalne arendusmudel</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body style="background-color: rgb(181, 211, 151);">
@@ -25,10 +26,10 @@
     <br>
     <br>
 
-    <table border="1" style="width: 60%;">
-        <tr style="text-align: center;">
-            <td>Eelised</td>
-            <td>Puudused</td>
+    <table>
+        <tr >
+            <th>Eelised</th>
+            <th>Puudused</th>
         </tr>
         <tr>
             <td>
@@ -59,7 +60,7 @@
     <a href="https://en.wikipedia.org/wiki/Incremental_build_model">Kasutatud kirjandus</a>
     <br>
     <br>
-    <a href="javascript:window.history.back();">Tagasi</a>
+    <button onclick="javascript:window.history.back();" class="floating">Tagasi</button>    <br>
     <br>
     <br>
     <br>
