--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minu Tarkvara Arendusprotsessi Ainemapp</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
-<body style="background-color: rgb(159, 234, 234);">
+
+<body>
     <h1>Tarkvara Arendusprotsessi tehtud tööde konspekt</h1>
     <br>
+ 
+    <section>
+        <nav>
+
+           
     <ul>
         <li><a href="elutsykkel/waterfall.html">Waterfall arendusmudel</a></li>
         <li><a href="elutsykkel/inkrementaalne.html">Inkrementaalne arendusmudel</a></li>
@@ -17,18 +24,26 @@
         <li><a href="elutsykkel/prototüüpimine.html">Prototüüpimine</a></li>
         <br>
         <li><a href="casevahendid/main.html">CASE-vahendid</a></li>
-    </ul>
+        <br>
+        <li><a href="elutsykkel/agiilne.html">Agiilne mudel</a></li>
+        <li><a href="elutsykkel/big-bang.html">Big Bang mudel</a></li>
+        <li><a href="elutsykkel/Devops.html">DevOps mudel</a></li>
+        <li><a href="elutsykkel/extreme-programming.html">Extreme Programming mudel</a></li>
+        <li><a href="elutsykkel/V-Model.html">V-Model</a></li>
+
+   
+    </nav>
+
+    <article>
     <br />
-    <br />
-    <br />
-    <br />
+    
     <h2>Minust</h2>
-    <table border="1" style="text-align: center;">
+    <table>
         <tr>
-            <td>Nimi</td>
-            <td>Mida teen</td>
-            <td>Kust tulen</td>
-            <td>Pilt</td>
+            <th>Nimi</th>
+            <th>Mida teen</th>
+            <th>Kust tulen</th>
+            <th>Pilt</th>
         </tr>
         <tr>
             <td>Orvet Priimägi</td>
@@ -37,9 +52,18 @@
             <td><img src="pildid/pilt.png" alt="pilt" style="width:150px;height:160px"></td>
         </tr>
         <tr>
-            <td colspan="4"><a href="https://github.com/corvert/TaapTARge24">Minu github link</a></td>
+            <td colspan="4" style="text-align: center;"><a href="https://corvert.github.io/TaapTARge24/" target="_blank">Minu github link</a></td>
         </tr>
     </table>
+    <br>
+
+</article>
+</section>
+<footer>
+
+    Orvet Priimägi - TARge24
+
+</footer>
 
 </body>
 
