--- a/casevahendid/main.html
+++ b/casevahendid/main.html
@@ -12,6 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CASE-vahendid</title>
+    <link rel="stylesheet" href="../styles.css">
 
 </head>
 
@@ -168,10 +169,14 @@
     <br>
 
     <br>
-    <a href="javascript:window.history.back();">Tagasi</a>
+    
+    <button onclick="javascript:window.history.back();" class="floating">Tagasi</button>
     <br>
     <br>
 
 </body>
+<footer>
+    Orvet Priimägi - TARge24
+</footer>
 
 </html>
