Agile, Big Bang, DevOps, Extreme Programming, V-Shape, css

--- a/casevahendid/uppercase.html
+++ b/casevahendid/uppercase.html
@@ -12,6 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uppercase</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -35,11 +36,12 @@
     U-CASE tööriistade näideteks on IBM Rational Rose ja Sparx Systems Enterprise Architect.
 
     <h3>Ise olen kasutanud</h3>
+    <p>
     <ul>
         <li>Notepad++</li>
         <li>Microsoft PowerPoint</li>
     </ul>
-
+</p>
     <h3>Näide üks: IBM Rational Rose <a href="https://en.wikipedia.org/wiki/IBM_Rational_Rose">(2) <img
             src="../pildid/IBMRoseLogo.png" alt="Rose logo" style="width:150px;height:80px"></a></h3>
     <p>Rational Rose oli Unified Modeling Language arenduskeskkond. See integreerub Microsoft Visual Studio .NET ja
@@ -78,8 +80,8 @@
         href="https://en.wikipedia.org/wiki/Enterprise_Architect_(software)">https://en.wikipedia.org/wiki/Enterprise_Architect_(software)</a>
     <br>
     <br>
-    <a href="javascript:window.history.back();">Tagasi</a>
-    <br>
+
+    <button onclick="javascript:window.history.back();">Tagasi</button>    <br>
     <br>
 </body>
 
