--- a/elutsykkel/spiraalmudel.html
+++ b/elutsykkel/spiraalmudel.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spiraalmudel</title>
+    <link rel="stylesheet" href="../styles.css">
 
 </head>
 
@@ -31,10 +32,10 @@
     <img src="../pildid/spiraal.jpg" alt="Koskmudel" style="width:350px;height:160px">
     </p>
     <br>
-    <table border="1">
-        <tr style="text-align: center;">
-            <td>Eelised</td>
-            <td>Puudused</td>
+    <table>
+        <tr>
+            <th>Eelised</th>
+            <th>Puudused</th>
         </tr>
         <tr>
             <td>
@@ -82,7 +83,7 @@
     <a href="https://www.geeksforgeeks.org/software-engineering-spiral-model/">Kasutatud kirjandus</a>
     <br>
     <br>
-    <a href="javascript:window.history.back();">Tagasi</a>
+    <button onclick="javascript:window.history.back();">Tagasi</button>    <br>
     <br>
     <br>
     <br>
