--- a/elutsykkel/waterfall.html
+++ b/elutsykkel/waterfall.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waterfall arendusmudel</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body style="background-color: burlywood;">
@@ -36,13 +37,13 @@
     </ul>
     <br>
     <br>
-    <img src="../pildid/Koskmudel.png" alt="Koskmudel" style="width:350px;height:160px">
+    <img src="../pildid/Koskmudel.png" alt="Koskmudel" style="width:400px;height:160px">
     </p>
     <br>
-    <table border="1">
-        <tr style="text-align: center;">
-            <td>Eelised</td>
-            <td>Puudused</td>
+    <table>
+        <tr>
+            <th>Eelised</th>
+            <th>Puudused</th>
         </tr>
         <tr>
             <td>
@@ -73,7 +74,7 @@
     <a href="https://et.wikipedia.org/wiki/Koskmudel">Kasutatud kirjandus</a>
     <br>
     <br>
-<a href="javascript:window.history.back();">Tagasi</a>  
+    <button onclick="javascript:window.history.back();">Tagasi</button>    <br>
 <br>
 <br>
 <br>
