--- a/casevahendid/lowercase.html
+++ b/casevahendid/lowercase.html
@@ -12,6 +12,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lowercase</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -101,7 +102,8 @@
     (3) <a href="https://et.wikipedia.org/wiki/Thonny">https://et.wikipedia.org/wiki/Thonny</a>
     <br />
     <br />
-    <a href="javascript:window.history.back();">Tagasi</a>
+
+    <button onclick="javascript:window.history.back();">Tagasi</button>
     <br />
     <br />
 </body>
