--- a/elutsykkel/inkrementaalne.html
+++ b/elutsykkel/inkrementaalne.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inkrementaalne arendusmudel</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body style="background-color: rgb(181, 211, 151);">
@@ -59,7 +60,7 @@
     <a href="https://en.wikipedia.org/wiki/Incremental_build_model">Kasutatud kirjandus</a>
     <br>
     <br>
-    <a href="javascript:window.history.back();">Tagasi</a>
+    <button onclick="javascript:window.history.back();">Tagasi</button>    <br>
     <br>
     <br>
     <br>
