--- a/elutsykkel/prototüüpimine.html
+++ b/elutsykkel/prototüüpimine.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prototüüpimine</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body style="background-color: rgb(205, 188, 62);">
@@ -29,10 +30,10 @@
     <img src="../pildid/Prototyypimine.png" alt="Prototüüpimine" style="width:450px;height:200px">
     </p>
     <br>
-    <table border="1">
-        <tr style="text-align: center;">
-            <td>Eelised</td>
-            <td>Puudused</td>
+    <table>
+        <tr>
+            <th>Eelised</th>
+            <th>Puudused</th>
         </tr>
         <tr>
             <td>
@@ -69,7 +70,7 @@
     <a href="https://www.javatpoint.com/software-engineering-prototype-model">Kasutatud kirjandus</a>
     <br>
     <br>
-    <a href="javascript:window.history.back();">Tagasi</a>
+    <button onclick="javascript:window.history.back();">Tagasi</button>    <br>
     <br>
     <br>
     <br>
