--- a/index.html
+++ b/index.html
@@ -17,18 +17,24 @@
         <li><a href="elutsykkel/prototüüpimine.html">Prototüüpimine</a></li>
         <br>
         <li><a href="casevahendid/main.html">CASE-vahendid</a></li>
+        <br>
+        <li><a href="elutsykkel/agiilne.html">Agiilne mudel</a></li>
+        <li><a href="elutsykkel/big-bang.html">Big Bang mudel</a></li>
+        <li><a href="elutsykkel/Devops.html">DevOps</a></li>
+        <li><a href="elutsykkel/extreme-programming.html">Extreme Programming</a></li>
+        <li><a href="elutsykkel/V-Model.html">V-Model</a></li>
     </ul>
     <br />
     <br />
     <br />
     <br />
     <h2>Minust</h2>
-    <table border="1" style="text-align: center;">
+    <table>
         <tr>
-            <td>Nimi</td>
-            <td>Mida teen</td>
-            <td>Kust tulen</td>
-            <td>Pilt</td>
+            <th>Nimi</th>
+            <th>Mida teen</th>
+            <th>Kust tulen</th>
+            <th>Pilt</th>
         </tr>
         <tr>
             <td>Orvet Priimägi</td>
@@ -37,7 +43,7 @@
             <td><img src="pildid/pilt.png" alt="pilt" style="width:150px;height:160px"></td>
         </tr>
         <tr>
-            <td colspan="4"><a href="https://github.com/corvert/TaapTARge24">Minu github link</a></td>
+            <td colspan="4"><a href="https://corvert.github.io/TaapTARge24/" target="_blank">Minu github link</a></td>
         </tr>
     </table>
 
