--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <h1>Tarkvara Arendusprotsessi tehtud tööde konspekt</h1>
     <br>
- 
+
     <section>
         <nav>
 
-           
+
     <ul>
         <li><a href="elutsykkel/waterfall.html">Waterfall arendusmudel</a></li>
         <li><a href="elutsykkel/inkrementaalne.html">Inkrementaalne arendusmudel</a></li>
@@ -24,9 +24,18 @@
         <li><a href="elutsykkel/prototüüpimine.html">Prototüüpimine</a></li>
         <br>
         <li><a href="casevahendid/main.html">CASE-vahendid</a></li>
+        <br>
+        <li><a href="elutsykkel/agiilne.html">Agiilne mudel</a></li>
+        <li><a href="elutsykkel/big-bang.html">Big Bang mudel</a></li>
+        <li><a href="elutsykkel/Devops.html">DevOps mudel</a></li>
+        <li><a href="elutsykkel/extreme-programming.html">Extreme Programming mudel</a></li>
+        <li><a href="elutsykkel/V-Model.html">V-Model</a></li>
+   
+    </nav>
+    <article>
     </ul>
     <br />
-    
+
     <h2>Minust</h2>
     <table>
         <tr>
@@ -42,6 +51,7 @@
             <td><img src="pildid/pilt.png" alt="pilt" style="width:150px;height:160px"></td>
         </tr>
         <tr>
+            <td colspan="4" style="text-align: center;"><a href="https://corvert.github.io/TaapTARge24/" target="_blank">Minu github link</a></td>
             <td colspan="4"><a href="https://github.com/corvert/TaapTARge24">Minu github link</a></td>
         </tr>
     </table>
@@ -56,5 +66,3 @@
 </footer>
 
 </body>
-
-</html>
