--- a/elutsykkel/Devops.html
+++ b/elutsykkel/Devops.html
@@ -80,14 +80,14 @@
     <a href="https://www.geeksforgeeks.org/how-devops-works/" target="_blank">Kasutatud kirjandus</a>
     <br>
     <br>
-<<<<<<< HEAD
+
     <button onclick="javascript:window.history.back();" class="floating">Tagasi</button> <br>
-=======
-    <button onclick="javascript:window.history.back();">Tagasi</button> <br>
->>>>>>> b302b627390cab8639358c8cc6e22f638a1bfec8
+ <br>
+
     <br>
     <br>
     <br>
 </body>
+<footer>Orvet Priimägi - TARge24</footer>
 
 </html>
