--- a/elutsykkel/V-Model.html
+++ b/elutsykkel/V-Model.html
@@ -32,8 +32,8 @@
         <li>Süsteemi testimine: Testitakse süsteemi terviklikku funktsionaalsust ja jõudlust vastavalt süsteemi disainis määratletule.</li>
         <li>Aktsepteerimistestimine: Nõuete analüüsis loodud testidega kontrollitakse, kas süsteem vastab kliendi nõudmistele ja töötab reaalses kasutuskeskkonnas.</li>
     </ol>
-   
- 
+
+
     <br>
     <br>
     <img src="../pildid/v-model.jpg" alt="V-mudel" style="width:650px; height:360px">
@@ -57,12 +57,12 @@
 
             <td>
                 <ul>
-             
+
                     <li>See mudel ei sobi ühegi keeruka projekti jaoks.</li>
                     <li>Jääb nii suur risk kui ka ebakindlus.</li>
                     <li>See ei ole sobiv mudel käimasoleva projekti jaoks.</li>
                     <li>See mudel ei sobi üldse projektile, mis on ebaselge ja mille nõudeid on muudetud.</li>
-                  
+
                 </ul>
             </td>
         </tr>
@@ -71,14 +71,14 @@
     <a href="https://www.geeksforgeeks.org/top-8-software-development-models-used-in-industry/#2-vmodel">Kasutatud kirjandus</a>
     <br>
     <br>
-<<<<<<< HEAD
+
     <button onclick="javascript:window.history.back();" class="floating">Tagasi</button>    <br>
-=======
-    <button onclick="javascript:window.history.back();">Tagasi</button>    <br>
->>>>>>> b302b627390cab8639358c8cc6e22f638a1bfec8
+
     <br>
     <br>
     <br>
 </body>
+<footer>Orvet Priimägi - TARge24</footer>
+
 
 </html>
