--- a/elutsykkel/big-bang.html
+++ b/elutsykkel/big-bang.html
@@ -11,19 +11,19 @@
 <body>
     <p>
     <h1>Big Bang mudel</h1>
- 
-        Big Bangi mudel on SDLC-mudel, mis saab alguse mitte millestki. See on SDLC (Software Development Life Cycle)
-        kõige lihtsam mudel, kuna see ei nõua peaaegu üldse planeerimist. See nõuab aga palju raha ja kodeerimist ning
-        võtab rohkem aega. Suure Paugu mudeli nimi pandi paika pärast "Suuret Suurt Pauku", mis viis galaktikate,
-        tähtede, planeetide jne väljatöötamiseni. Samamoodi ühendab see SDLC-mudel toote ehitamiseks aega, jõupingutusi
-        ja ressursse. Toodet ehitatakse järk-järgult vastavalt kliendi nõudmistele, kuid lõpptoode ei pruugi vastata
-        tegelikele nõuetele.
+
+    Big Bangi mudel on SDLC-mudel, mis saab alguse mitte millestki. See on SDLC (Software Development Life Cycle)
+    kõige lihtsam mudel, kuna see ei nõua peaaegu üldse planeerimist. See nõuab aga palju raha ja kodeerimist ning
+    võtab rohkem aega. Suure Paugu mudeli nimi pandi paika pärast "Suuret Suurt Pauku", mis viis galaktikate,
+    tähtede, planeetide jne väljatöötamiseni. Samamoodi ühendab see SDLC-mudel toote ehitamiseks aega, jõupingutusi
+    ja ressursse. Toodet ehitatakse järk-järgult vastavalt kliendi nõudmistele, kuid lõpptoode ei pruugi vastata
+    tegelikele nõuetele.
 
     <h4>Disain</h4>
     Toote nõudeid mõistetakse ja rakendatakse nende saabumisel. Terviklikud moodulid või vähemalt osa moodulitest on
-        integreeritud ja testitud. Kõiki mooduleid käitatakse eraldi ja defektsed eemaldatakse põhjuse
-        väljaselgitamiseks. See on sobiv mudel, kus nõudeid ei mõisteta hästi ja lõplikku väljalaskekuupäeva pole antud.
-        Lihtsamalt öeldes saab selle järk-järgult lõpetada 3 punktiga, st
+    integreeritud ja testitud. Kõiki mooduleid käitatakse eraldi ja defektsed eemaldatakse põhjuse
+    väljaselgitamiseks. See on sobiv mudel, kus nõudeid ei mõisteta hästi ja lõplikku väljalaskekuupäeva pole antud.
+    Lihtsamalt öeldes saab selle järk-järgult lõpetada 3 punktiga, st
     <ol type="1">
         <li>Integreerige iga üksikisiku moodulid, et anda ainulaadne integreeritud ülevaade</li>
         <li>Vigade või defektide tuvastamiseks testige iga moodulit eraldi</li>
@@ -45,25 +45,25 @@
         <tr>
             <td>
                 <ul>
-                   
+
                     <li>Selleks pole planeerimist vaja.</li>
                     <li>Sobib väikeste projektide jaoks</li>
                     <li>Sobib väikeste projektide jaoks</li>
-                    <li>Kuna puudub korralik planeerimine, ei vaja see juhtkonda                    </li>
-                    <li>Lihtne rakendada                    </li>
-                    <li>See arendab uute tulijate oskusi                    </li>
-                    <li>Väga paindlik selle kallal töötavate arendajate jaoks                    </li>
+                    <li>Kuna puudub korralik planeerimine, ei vaja see juhtkonda </li>
+                    <li>Lihtne rakendada </li>
+                    <li>See arendab uute tulijate oskusi </li>
+                    <li>Väga paindlik selle kallal töötavate arendajate jaoks </li>
 
                 </ul>
             </td>
 
             <td>
                 <ul>
-              
-                    <li>Väga paindlik selle kallal töötavate arendajate jaoks                    </li>
-                    <li>Väga riskantne mudel ja ebakindel                    </li>
-                    <li>Kui nõuded pole selged, võib see olla kulukas                    </li>
-                    <li>Kehv mudel käimasolevate projektide jaoks                    </li>
+
+                    <li>Väga paindlik selle kallal töötavate arendajate jaoks </li>
+                    <li>Väga riskantne mudel ja ebakindel </li>
+                    <li>Kui nõuded pole selged, võib see olla kulukas </li>
+                    <li>Kehv mudel käimasolevate projektide jaoks </li>
 
                 </ul>
             </td>
@@ -73,14 +73,14 @@
     <a href="https://www.geeksforgeeks.org/overview-of-big-bang-model/">Kasutatud kirjandus</a>
     <br>
     <br>
-<<<<<<< HEAD
-    <button onclick="javascript:window.history.back();" class="floating">Tagasi</button>    <br>
-=======
-    <button onclick="javascript:window.history.back();">Tagasi</button>    <br>
->>>>>>> b302b627390cab8639358c8cc6e22f638a1bfec8
+
+    <button onclick="javascript:window.history.back();" class="floating">Tagasi</button> <br>
+
     <br>
     <br>
     <br>
 </body>
+<footer>Orvet Priimägi - TARge24</footer>
+
 
 </html>
