--- a/elutsykkel/extreme-programming.html
+++ b/elutsykkel/extreme-programming.html
@@ -84,14 +84,13 @@
     <a href="https://www.geeksforgeeks.org/software-engineering-extreme-programming-xp/">Kasutatud kirjandus</a>
     <br>
     <br>
-<<<<<<< HEAD
+
     <button onclick="javascript:window.history.back();" class="floating">Tagasi</button>    <br>
-=======
-    <button onclick="javascript:window.history.back();">Tagasi</button>    <br>
->>>>>>> b302b627390cab8639358c8cc6e22f638a1bfec8
+
     <br>
     <br>
     <br>
 </body>
+<footer>Orvet Priimägi - TARge24</footer>
 
 </html>
