--- a/elutsykkel/inkrementaalne.html
+++ b/elutsykkel/inkrementaalne.html
@@ -60,14 +60,13 @@
     <a href="https://en.wikipedia.org/wiki/Incremental_build_model">Kasutatud kirjandus</a>
     <br>
     <br>
-<<<<<<< HEAD
+
     <button onclick="javascript:window.history.back();" class="floating">Tagasi</button>    <br>
-=======
-    <button onclick="javascript:window.history.back();">Tagasi</button>    <br>
->>>>>>> b302b627390cab8639358c8cc6e22f638a1bfec8
+
     <br>
     <br>
     <br>
 </body>
+<footer>Orvet Priimägi - TARge24</footer>
 
 </html>
