--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
         <li><a href="elutsykkel/Devops.html">DevOps mudel</a></li>
         <li><a href="elutsykkel/extreme-programming.html">Extreme Programming mudel</a></li>
         <li><a href="elutsykkel/V-Model.html">V-Model</a></li>
+        <br>
+        <li><a href="btc/main.html">Bitcoin kalkulaator</a></li>
    
     </nav>
     <article>
     </ul>
     <br />
 
-    <h2>Minust</h2>
+    <h2 style="text-align: center;">Minust</h2>
     <table>
         <tr>
             <th>Nimi</th>
@@ -52,7 +54,7 @@
         </tr>
         <tr>
             <td colspan="4" style="text-align: center;"><a href="https://corvert.github.io/TaapTARge24/" target="_blank">Minu github link</a></td>
-            <td colspan="4"><a href="https://github.com/corvert/TaapTARge24">Minu github link</a></td>
+           
         </tr>
     </table>
     <br>
