Lisa UML diagramm

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <li><a href="elutsykkel/V-Model.html">V-Model</a></li>
         <br>
         <li><a href="btc/main.html">Bitcoin kalkulaator</a></li>
+        <br>
+        <li><a href="uml-diagramm/main.html"></a></li>
    
     </nav>
     <article>
