UML main, BTC diagramm uuendus

--- a/btc/main.html
+++ b/btc/main.html
@@ -82,7 +82,7 @@
     <br>
     <a href="Bitcoin_Calculator.docx">Nõuete dokument </a>
     <br>
-    <a href="bitcoin.drawio.html">Flowchart</a>
+    <a href="diagramm.drawio.html">Flowchart</a>
     <br>
     <a href="https://github.com/corvert/BitcoinCalculator" target="_blank">Github repo</a>
 
