--- a/uml-diagramm/main.html
+++ b/uml-diagramm/main.html
@@ -1,12 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>UML-diagrammid</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
+
 <body>
-    
+
+    <h1> UML-diagrammidest ja nende kasutusest </h1>
+
+    <p>Unified Modeling Language (UML) on graafiline keel süsteemide ja tarkvara visualiseerimiseks, olles eriti kasulik
+        dokumenteerimisel, planeerimisel, optimeerimisel ja arendamisel. UML-diagrammid jagunevad
+        struktuuridiagrammideks (näitavad süsteemi staatilisi seoseid) ja käitumisdiagrammideks (näitavad
+        süsteemi dünaamilist toimimist). </p>
+
+    <h2>Peamised UML-diagrammid <a href="https://www.tud.ttu.ee/im/Vladimir.Viies/materials/YLDINEkaust/Helena_materjalid/objektid/objekt01/osa07.html" target="_blank" style="font-size: 20px;">(1)</a> </h2>
+    <p>
+    <ol>
+        <li>Kasutuslooskeem (Use case diagram)</li>
+        Kasutuslooskeeme kasutatakse süsteemi moodustavate tähtsaimate elementide ja protsesside määramiseks.
+        Primaarelemente nimetatakse "aktoriteks" ning protsesse "kasutuslugudeks". Kasutuslooskeem näitab, millised
+        aktorid suhtlevad iga kasutususlooga.
+
+        <li>Klassiskeem (Class diagram):</li>
+        Klassiskeemi kasutatakse süsteemidisaini täpsustamiseks ja kasutuslooskeemi täiendamiseks. See jagab
+        kasutuslooskeemil määratud aktorid omavahel seotud klassideks. Klassidevahelised suhted võivad olla "on" või
+        "omab" tüüpi. Klassid pakuvad funktsionaalsust klassi meetodite kaudu ning neil on atribuute, mis kirjeldavad
+        klassi omadusi ja määratlevad selle üheselt.
+        <li>Objektiskeem (Object diagram):</li>
+        Objektskeem on teatud tüüpi klassiskeem. Objekt esitab klassi olekut teatud ajahetkel süsteemi töö käigus.
+        Objektiskeem esitab süsteemi erinevate klasside olekuid ning nendevahelisi relatsioone või assotsiatsioone
+        teatud ajahetkel.
+
+        <li>Olekuskeem (State Diagram):</li>
+        Olekuskeem kujutab süsteemi objektide erinevaid olekuid nende elutsükli jooksul. See näitab, kuidas objektid
+        muudavad oma olekut vastavalt süsteemis toimuvatele sündmustele, ning kirjeldab üleminekuid algolekust
+        lõppolekusse süsteemi mõjutavate sündmuste alusel.
+        <li>Tegevusskeem (Activity diagram):</li>
+        Protsesside kulgemist süsteemis kirjeldatakse tegevusskeemi abil. Sarnaselt olekuskeemile koosneb ka
+        tegevusskeem toimingutest, tegevustest, üleminekutest, alg- ja lõppolekust ning tõkisetingimustest
+        <li>Jadaskeem (Sequence diagram): j</li>
+        Jadaskeem esitab süsteemi objektide
+        omavahelist suhtlemist. Jadaskeemi oluliseks omaduseks on selle ajaline järjestus.
+        S.o. esitatakse samm-sammult täpne objektide vaheline interaktsioon. Erinevad
+        objektid jadaskeemil suhtlevad omavahel "sõnumite" edastamise kaudu.
+
+        <li>Koostööskeem (Collaboration diagram):</li>
+        Koostööskeem grupeerib erinevate objektide vahelise interaktsiooni. Interaktsioonid esitatakse nummerdatuna, mis
+        lubab jälgida nende toimumise järjekorda. Koostööskeem lubab kindlaks teha kõikvõimalikud interaktsioonid mis
+        igat objekti teistega seovad.
+        <li>Komponentskeem (Component diagram):</li>
+        Komponentskeemi abil kujutatakse kõrgtaseme osi, millest süsteem koosneb. See skeem esitab millised komponendid
+        süsteemi moodustavad ning kuidas nad omavahel seotud on. Levitusskeem (Deployment diagram): levitusskeemi abil
+        kujutatakse rakenduse käitusaegeseid elemente.
+    </ol>
+    </p>
+
+    <h2>Täpsemad UML-diagrammid suuremate süsteemide jaoks <a href="https://drawio-app.com/blog/uml-diagrams/" target="_blank" style="font-size: 20px;">(2)</a></h2>
+    <ol>
+        <li>Ajastus diarammid - jälgivad objektide käitumist aja jooksul.</li>
+        <li>Objektidiagrammid - näitavad klassidiagrammide praktilist rakendust.</li>
+        <li>Komponentide diagrammid - kirjeldavad keeruliste süsteemide komponente ja liideseid.</li>
+        <li>Paigaldus diagrammid - näitavad tarkvara juurutamist mitmes süsteemis.</li>
+        <li>Pakendi diagrammid - illustreerivad süsteemi sõltuvusi suurte koodibaaside korral.</li>
+        <li>Komposiitstruktuuri diagrammid - esindavad klasside sisemist struktuuri.</li>
+        <li>Profiilidiagrammid - laiendavad UML-i kasutamiseks spetsiifilistes domeenides (nt tervishoid).</li>
+    </ol>
+<br>
+(1) <a href="https://www.tud.ttu.ee/im/Vladimir.Viies/materials/YLDINEkaust/Helena_materjalid/objektid/objekt01/osa07.html" target="_blank">https://www.tud.ttu.ee/im/Vladimir.Viies/materials/YLDINEkaust/Helena_materjalid/objektid/objekt01/osa07.html</a>
+<br>
+(2) <a href="https://drawio-app.com/blog/uml-diagrams/" target="_blank">https://drawio-app.com/blog/uml-diagrams/</a>
+
+    <br>
+
+    <button onclick="javascript:window.history.back();" class="floating">Tagasi</button> <br>
+
+    <br>
+    <br>
+    <br>
 </body>
+<footer>
+    Orvet Priimägi - TARge24
+</footer>
+
+</body>
+
 </html>
