--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <br>
         <li><a href="btc/main.html">Bitcoin kalkulaator</a></li>
         <br>
-        <li><a href="uml-diagramm/main.html"></a></li>
+        <li><a href="uml-diagramm/main.html">UML-diagrammid</a></li>
    
     </nav>
     <article>
