UML Diagramm final

--- a/uml-diagramm/erd.html
+++ b/uml-diagramm/erd.html
@@ -70,7 +70,30 @@
             <td>Many-to-Many suhe</td>
             <td><img src="many-to-many.png" alt="Many-to-Many" style="height: 60px; width: 200px;"></td>
         </tr>
-
+        <tr>
+            <td>Zero or One suhe</td>
+            <td><img src="zero-or-one.png" alt="Zero or One" style="height: 60px; width: 200px;"></td>
+        </tr>
+        <tr>
+            <td>Many suhe</td>
+            <td><img src="many.png" alt="Many" style="height: 60px; width: 200px;"></td>
+        </tr>
+        <tr>
+            <td>One suhe</td>
+            <td><img src="one.png" alt="One" style="height: 60px; width: 200px;"></td>
+        </tr>
+        <tr>
+            <td>One (and only one)</td>
+            <td><img src="one-and-only-one.png" alt="One (and only one)" style="height: 60px; width: 200px;"></td>
+        </tr>
+        <tr>
+            <td>Zero or Many</td>
+            <td><img src="Zero-or-many.png" alt="Zero or Many" style="height: 60px; width: 200px;"></td>
+        </tr>
+         <tr>
+            <td>One or Many</td>
+            <td><img src="one-or-many.png" alt="One or Many" style="height: 60px; width: 200px;"></td>
+        </tr>
     </table>
     <h2>Võtmed <sup><a href="https://et.wikipedia.org/wiki/Andmebaas" target="_blank"
                 style="font-size: 15px;"></a>(3)</sup></h2>
@@ -82,6 +105,8 @@
         <li>Lihtvõti (Key): Üldine mõisted mis tahes atribuudile, mis suudab unikaalselt tuvastada entiteedi.</li>
 
     </ul>
+    <h2>Näide:</h2>
+    <img src="erd.png" alt="ERD näide">
     <br>
     Kasutatud kirjandus:
     <br>
